cabal-version:      2.4
name:               browser-example
version:            0.1.0.0

executable browser-example
    main-is:          Main.hs

    build-depends:    base ^>=4.17.0.0,
                      lucid-svg,
		      text,
    hs-source-dirs:   app
    ghc-options:      js/example.js
    default-language: Haskell2010
